--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,15 @@
 name: Jay Nakum
-owner_name: Jay Nakum
 email: contact.jaynakum@gmail.com
 
 title: FOSMods
 description: Free and Open Source Mods
 baseurl: "/"
 url: "https://fosmods.github.io"
-repository_url: "https://github.com/FOSMods"
 
 theme: jekyll-theme-cayman
+
+github:
+  owner_name: Jay Nakum
+  repository_url: "https://github.com/FOSMods"
 
 is_project_page: true
