--- a/_config.yml
+++ b/_config.yml
@@ -11,3 +11,5 @@ theme: jekyll-theme-cayman
 github:
   owner_name: Jay Nakum
   repository_url: "https://github.com/FOSMods"
+
+is_project_page: false
