--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,7 @@ title: FOSMods
 description: Free and Open Source Mods
 
 theme: jekyll-theme-cayman
+
+# github:
+#   repository_url: 
+#   # zip_url: http://example.com/download.zip
